# English-learning

./: .bazerlc  .gitignore  .gitlab-ci.yml  BUILD.bazel  Dockerfile  MODULE.bazel  MODULES.bazel  Makefile  README.md  WORKSPACE  WORKSPACE.bazel  config.py  conftest.py  gazelle_python.yaml  logging.ini  main.py  pytest.ini  requirements.txt  requirements_lock.txt  requirements_windows.txt
instance/: config.py  config.py.example  logging-dev.ini
migrations/: BUILD.bazel  __init__.py
migrations/versions/: 409e91ec78c2_init_database.py  969400da6ec0_update_database.py  c6e04698825f_add_has_voice.py
source/: BUILD.bazel  __init__.py  main_app.py  signals.py
source/commands/: BUILD.bazel  __init__.py  init_db.py  input_data.py
source/core/: BUILD.bazel  __init__.py
source/core/admin/: BUILD.bazel  __init__.py  user.py
source/core/api/: BUILD.bazel  __init__.py  errors.py
source/core/api/health/: BUILD.bazel  __init__.py  urls.py
source/core/api/health/core/: BUILD.bazel  health.py
source/core/api/postman/: BUILD.bazel  __init__.py  urls.py
source/core/api/postman/core/: BUILD.bazel  postman.py  postman_v1.py
source/core/api/v1/: BUILD.bazel  __init__.py  urls.py
source/core/api/v1/core/: BUILD.bazel  demo.py  library.py  settings.py  tmp.py  voice.py
source/core/api/v1/exception/: BUILD.bazel  __init__.py
source/core/api/v1/request/: BUILD.bazel  __init__.py  library.py  voice.py
source/core/api/v1/response/: BUILD.bazel  __init__.py
source/core/common/: BUILD.bazel  __init__.py  urls.py
source/exts/: BUILD.bazel  __init__.py  action_lock.py  cache_manager.py  celery.py  jinja2.py  login_manager.py
source/exts/authz/: BUILD.bazel  __init__.py
source/exts/marshmallow/: BUILD.bazel  __init__.py  fields.py  validators.py
source/exts/signals/: BUILD.bazel  __init__.py
source/helpers/: BUILD.bazel  __init__.py  cache_helpers.py  contants.py  db_helpers.py  http_helpers.py  http_helps.py  http_request.py  languages_helpers.py  sentry_helpers.py  string_helpers.py  time_helpers.py  validate.py
source/languages/: BUILD.bazel  vi.ini
source/models/: BUILD.bazel  database.py  dictionary.py  env_settings.py  http_log.py  leaderboard.py  user.py  user_exp.py
source/templates/: 403.html  404.html  my_master.html  pronunciation.html
source/templates/admin/: base.html  custom_layout.html  index.html  login.html  require_login.html
source/templates/static/admin/css/: AdminLTE.css  custom.css
source/templates/static/admin/js/: course_fee_create.js  custom.js  demo.js  function.js  input_test.js  reserves_create.js
source/templates/static/admin/plugins/bootstrap-wysihtml5/: bootstrap3-wysihtml5.all.js
source/utils/: BUILD.bazel  algorithm.py  cipher.py  db_helpers.py  download.py  gcloud.py  http_request.py  languages.py  request_log_utils.py  setting_utils.py  user_exp.py  user_utils.py
source/utils/auth/: BUILD.bazel  __init__.py  auth_login.py
source/utils/users/: BUILD.bazel  auth.py  user_info.py
tests/: BUILD.bazel
