load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "request",
    srcs = [
        "__init__.py",
        "library.py",
        "voice.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//source/core/api",
        "@pip//flask_restx",
        "@pip//werkzeug",
    ],
)
